<resources>
    <string name="app_name">CaloriesAssistant</string>
    <string name="dishes">Dishes</string>
    <string name="statistic">Statistic</string>
    <string name="name">Name</string>
    <string name="calories">Calories</string>
    <string name="weight">Weight</string>
    <string name="sign_in">SIGN IN</string>
    <string name="more_info">More info</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="your_height">Your height</string>
    <string name="your_weight">Your weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="user_activity_no">Activity is very low or absent</string>
    <string name="user_activity_low">Activity is low (1–3 workouts per weak)</string>
    <string name="user_activity_medium">Activity is medium (3–5 workouts per weak)</string>
    <string name="user_activity_high">Activity is medium (6–7 workouts per weak)</string>
    <string name="user_activity_very_high">Activity is very high (>2 workouts per day)</string>
    <string name="sex_man">Man</string>
    <string name="sex_woman">Woman</string>
    <string name="daily_rate">Daily rate:</string>
    <string name="sex">Sex</string>
    <string name="activity_level">Activity level</string>
    <string name="temp_text">Temp text</string>
    <string name="log_out">Log out</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_dish">Enter dish</string>
    <string name="dish_search">Dish search</string>
    <string name="enter_weigh">Enter weigh</string>
    <string name="edit">Edit</string>
</resources>
