<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools" app:cardCornerRadius="3dp"
                                    app:cardElevation="4dp"
                                    app:cardPreventCornerOverlap="true"
                                    app:cardUseCompatPadding="true"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/temp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_dish_chooser_tv_name"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/dp_16"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/colorBlack"
                />

        <TextView
                android:text="@string/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_dish_chooser_tv_calories"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/card_dish_chooser_tv_name"
                app:layout_constraintStart_toStartOf="@+id/card_dish_chooser_tv_name"
                />

        <android.support.design.button.MaterialButton
                android:text="@string/more_info"
                android:background="@color/colorTransparent"
                android:textColor="@color/colorBlueLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/card_dish_chooser_b_more_info"
                app:layout_constraintBottom_toBottomOf="@+id/card_dish_chooser_et_weight"
                app:layout_constraintTop_toTopOf="@+id/card_dish_chooser_et_weight"
                />

        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_close_black_24dp"
                android:background="@color/colorTransparent"
                android:id="@+id/card_dish_chooser_b_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/enter_weigh"
                android:ems="10"
                android:id="@+id/card_dish_chooser_et_weight"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/card_dish_chooser_tv_calories"
                app:layout_constraintStart_toStartOf="@+id/card_dish_chooser_tv_calories"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>