<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              app:cardElevation="4dp"
                                              app:cardUseCompatPadding="true"
                                              app:cardCornerRadius="3dp"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_ingredient_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>

        <TextView
                android:text="@string/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/card_ingredient_name"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/card_ingredient_calories"/>

        <TextView
                android:text="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_14"
                app:layout_constraintTop_toTopOf="@+id/card_ingredient_calories"
                app:layout_constraintBottom_toBottomOf="@+id/card_ingredient_calories"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:id="@+id/card_ingredient_weight"
                />
    </android.support.constraint.ConstraintLayout>
</android.support.design.card.MaterialCardView>