<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="userAuthorization"
                type="com.example.domain.model.UserAuthorization"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                app:layout_constraintGuide_percent="0.25"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintVertical_bias="0.51">


            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/input_layout_login"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintTop_toTopOf="parent"
                        >

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:lines="1"
                            android:ems="10"
                            android:hint="@string/login"
                            android:text="@={userAuthorization.name}"
                            android:id="@+id/fragment_sign_in_et_login"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@+id/input_layout_login"
                        android:id="@+id/text_input_layout_password"
                        app:layout_constraintTop_toBottomOf="@+id/input_layout_login"
                        app:layout_constraintEnd_toEndOf="@+id/input_layout_login">

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:ems="10"
                            android:text="@={userAuthorization.password}"
                            android:hint="@string/password"
                            android:id="@+id/fragment_sign_in_password"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                        android:text="@string/sign_in"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_sign_in_btn_sign_in"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
                        app:layout_constraintStart_toStartOf="@+id/text_input_layout_password"
                        app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password"/>

                <Button
                        android:text="@string/registration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/fragment_sign_in_btn_sign_up"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_in_btn_sign_in"
                        app:layout_constraintStart_toStartOf="@+id/fragment_sign_in_btn_sign_in"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_sign_in_btn_sign_in"
                        android:layout_marginTop="8dp"/>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>