<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.example.calorieassistant.util.Converter"/>
        <variable
                name="userPersonal"
                type="com.example.domain.model.UserPersonal"/>
    </data>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="170dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout3">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:inputType="numberDecimal"
                android:text="@{Converter.convertDoubleToString( userPersonal.height )}"
                android:id="@+id/fragment_personal_info_et_height"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/textInputLayout3"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:text="@{Converter.convertDoubleToString( userPersonal.weight )}"
                android:id="@+id/fragment_personal_info_et_weight"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            android:id="@+id/textInputLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/fragment_personal_info_spn_sex"
            android:layout_marginStart="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:text="@{Converter.convertIntToString( userPersonal.age )}"
                android:id="@+id/fragment_personal_info_age"/>
    </android.support.design.widget.TextInputLayout>

    <Spinner
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/fragment_personal_info_spn_sex"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="8dp"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_personal_info_spn_activity"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.2"/>

    <Button
            android:text="@string/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_personal_info_btn_submit"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_personal_info_spn_activity"
            app:layout_constraintStart_toStartOf="@+id/fragment_personal_info_spn_activity"
            app:layout_constraintEnd_toEndOf="@+id/fragment_personal_info_spn_activity"/>

</android.support.constraint.ConstraintLayout>
</layout>