<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.calorieassistant.util.Converter"/>
        <import type="com.example.domain.model.Sex"/>
        <variable
                name="viewModel"
                type="com.example.calorieassistant.main.account.AccountViewModel"/>
        <variable
                name="userPersonal"
                type="com.example.domain.model.UserPersonal"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@{viewModel.username}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_account_tv_login"
                android:textSize="@dimen/sp_22"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:text="@string/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_account_tv_login"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

        <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:text="@{`` + viewModel.userPersonal.height}"
                android:gravity="center"
                android:clickable="@{viewModel.editable}"
                android:cursorVisible="@{viewModel.editable}"
                android:focusable="@{viewModel.editable}"
                android:focusableInTouchMode="@{viewModel.editable}"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:id="@+id/fragment_account_tv_height"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <android.support.constraint.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3"
                app:layout_constraintGuide_percent="0.5"/>

        <TextView
                android:text="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView5"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"/>

        <TextView
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView7"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"/>

        <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:text="@{`` + viewModel.userPersonal.weight}"
                android:gravity="center"
                android:clickable="@{viewModel.editable}"
                android:cursorVisible="@{viewModel.editable}"
                android:focusable="@{viewModel.editable}"
                android:focusableInTouchMode="@{viewModel.editable}"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                android:id="@+id/fragment_account_tv_weight"/>

        <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:text="@{`` + viewModel.userPersonal.age}"
                android:gravity="center"
                android:clickable="@{viewModel.editable}"
                android:cursorVisible="@{viewModel.editable}"
                android:focusable="@{viewModel.editable}"
                android:focusableInTouchMode="@{viewModel.editable}"
                android:textColor="@color/colorBlack"
                android:id="@+id/fragment_account_tv_age"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:text="@{viewModel.userPersonal.sex.name}"
                android:gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorBlack"
                android:id="@+id/fragment_account_tv_sex"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
                android:text="@string/activity_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:id="@+id/textView11"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>

        <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:text="@{viewModel.userPersonal.activityLevel.name}"
                android:gravity="center"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorBlack"
                android:id="@+id/fragment_account_tv_activity_level"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <Button
                android:text="@string/log_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel. onLogOutClicked()}"
                android:id="@+id/fragment_account_log_out"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>